--- a/heart_hand/templates/account.html
+++ b/heart_hand/templates/account.html
@@ -17,8 +17,8 @@
                     </div>
 
                     <div class="form-group">
-                       {{form.email.label(class='form-group'}}
-                       {{form.email}(class='form-control')}
+                       {{form.email.label(class='form-group')}}
+                       {{form.email(class='form-control')}}
                     </div>
 
                     <div class="form-group">
