--- a/heart_hand/templates/login.html
+++ b/heart_hand/templates/login.html
@@ -1,9 +1,28 @@
 {% extends "base.html" %}
 {% block content %}
-  <form method="POST">
-      {{form.hidden_tag()}}
-      {{form.email.label}}{{form.email}}<br>
-      {{form.password.label}}{{form.password}}<br>
-      {{form.submit}}
-  </form>
+  <div class="jumbotron">
+      <div class="container">
+          <form method="POST">
+  
+              {{form.hidden_tag()}}
+      
+              <div class="form-group">
+                  {{form.email.label(class='form-group')}}
+                  {{form.email(class='form-control')}}    
+              </div>
+
+              <div class="form-group">
+                  {{form.password.label(class='form-group')}}
+                  {{form.password(class='form-control')}}
+              </div>
+
+              <div class="form-group">
+                  {{form.submit(class='btn btn-primary')}}
+              </div>
+      
+          </form>
+      </div>
+  </div>
+    
+    
 {% endblock %}    
