--- a/heart_hand/templates/register.html
+++ b/heart_hand/templates/register.html
@@ -1,11 +1,39 @@
 {% extends "base.html" %}
 {% block content %}
-  <form method="POST">
-      {{form.hidden_tag()}}
-      {{form.email.label}}{{form.email}}<br>
-      {{form.username.label}}{{form.username}}<br>
-      {{form.password.label}}{{form.password}}<br>
-      {{form.pass_confirm.label}}{{form.pass_confirm}}<br>
-      {{form.submit}}
-  </form>
+  <div class="jumbotron">
+    <div class="container">
+
+        <form method="POST">
+
+            {{form.hidden_tag()}}
+
+            <div class="form-group">
+                {{form.username..label(class='form-group')}}
+                {{form.username.(class='form-control')}}    
+            </div>
+
+            <div class="form-group">
+                {{form.email.label(class='form-group')}}
+                {{form.email(class='form-control')}}    
+            </div>
+
+            <div class="form-group">
+                {{form.password.label(class='form-group')}}
+                {{form.password(class='form-control')}}
+            </div>
+
+            <div class="form-group">
+                {{form.password_confirm..label(class='form-group')}}
+                {{form.password_confirm.(class='form-control')}}
+            </div>
+
+            <div class="form-group">
+                {{form.submit(class='btn btn-primary')}}
+            </div>
+
+        </form>
+
+    </div>
+  </div>
+  
 {% endblock %}    
