--- a/heart_hand/templates/index.html
+++ b/heart_hand/templates/index.html
@@ -1,4 +1,7 @@
 {% extends "base.html" %}
+{% block title %}
+Heart and Hand
+{% endblock %}
 {% block content %}
     <div class="jumbotron">
         <h1>Heart and Hand Management System</h1>
