add people_menu, add_customer form working

--- a/heart_hand/templates/base.html
+++ b/heart_hand/templates/base.html
@@ -27,6 +27,9 @@
         <li class='nav-link'>
                 <a href="{{url_for('users.account')}}">Account</a>
         </li>
+        <li class='nav-link'>
+            <a href="{{url_for('people.people_menu')}}">People Menu</a>
+        </li>
         {% else %}
         <li class='nav-link'>
                 <a href="{{url_for('users.login')}}">Log In</a>
