--- a/heart_hand/templates/people_pages/customer_details.html
+++ b/heart_hand/templates/people_pages/customer_details.html
@@ -3,9 +3,18 @@
   <div class="jumbotron">
     <div class="container">
         <h1>Customer Details for {{customer.first_name}} {{customer.last_name}} </h1>
-
-
+            <h2>Contact Details</h2>
+            <ul>
+              <li><strong>Phone: </strong> {{customer.phone}}</li>
+              <li><strong>Email: </strong> {{customer.email}}</li>
+              <li><strong>Address: </strong> {{customer.street_address}}, {{customer.suburb}}, {{customer.state}} {{customer.postcode}}</li>
+              <li><strong>Alternative Contact: </strong> {{customer.alternative_contact}}</li>
+              <li><strong>Alternative Contact Phone: </strong> {{customer.alternative_contact_phone}}</li>
+              <li><strong>Notes: </strong> {{customer.notes}}</li>
+            </ul>
+            
             <br>
+            <a class="btn btn-primary btn-block" href="{{url_for('people.update_customer',id=customer.id)}}" role="button">Update Customer Details</a>
             <a class="btn btn-primary btn-block" href="add_child.html" role="button">Add Child</a>
     </div>
   </div>
