--- a/heart_hand/templates/people_pages/people_menu.html
+++ b/heart_hand/templates/people_pages/people_menu.html
@@ -3,7 +3,7 @@
   <div class="jumbotron">
     <div class="container">
         <h1>People Menu</h1>
-       
+        <a class="btn btn-primary btn-block" href="{{ url_for('people.show_all_customers') }}" role="button">Show All Customers</a>
         <a class="btn btn-primary btn-block" href="{{ url_for('people.add_customer') }}" role="button">Add Customer</a>
     </div>
   </div>
