--- a/heart_hand/templates/people_pages/add_child.html
+++ b/heart_hand/templates/people_pages/add_child.html
@@ -3,13 +3,9 @@
 {% block content %}
   <div class="jumbotron">
     <div class="container">
-        <h1>Add Child</h1>
-        
-        Parent name is {{ first_name }}
-        Parent last name is {{ last_name}}  
-        email is {{ email }}  
-       
-        <form method="POST" action="{{ url_for('add_child', arg1=first_name, arg2=last_name, arg3=email ) }}">
+        <h1>Add Child for {{parent.first_name}} {{parent.last_name}}</h1>
+         
+        <form method="POST">
               {{form.hidden_tag()}}
               
               {{ render_field_with_errors(form.first_name, class="form-control") }}
