questionaire types working

--- a/heart_hand/templates/base.html
+++ b/heart_hand/templates/base.html
@@ -30,6 +30,9 @@
         <li class='nav-link'>
             <a href="{{url_for('people.people_menu')}}">People Menu</a>
         </li>
+        <li class='nav-link'>
+            <a href="{{url_for('questionaire.show_all_questionaire_types')}}">Questionaire Menu</a>
+        </li>
         {% else %}
         <li class='nav-link'>
                 <a href="{{url_for('users.login')}}">Log In</a>
