added curriculum related model changes forms and views

--- a/heart_hand/templates/base.html
+++ b/heart_hand/templates/base.html
@@ -33,6 +33,9 @@
         <li class='nav-link'>
             <a href="{{url_for('questionaire.show_all_questionaire_types')}}">Questionaire Menu</a>
         </li>
+        <li class='nav-link'>
+            <a href="{{url_for('curriculum.curriculum_menu')}}">Curriculum Menu</a>
+        </li>
         {% else %}
         <li class='nav-link'>
                 <a href="{{url_for('users.login')}}">Log In</a>
