curriculum tables and adding items works ok, except for subjects not shown when updating

--- a/heart_hand/templates/curriculum_pages/add_curriculum_item.html
+++ b/heart_hand/templates/curriculum_pages/add_curriculum_item.html
@@ -7,7 +7,7 @@
               <form method="POST">
 
                 {{form.hidden_tag()}}
-                {{ render_field_with_errors(form.subject_id, class="form-control") }}
+                {{ render_field_with_errors(form.subject, class="form-control") }}
                 {{ render_field_with_errors(form.term, class="form-control") }}
                 {{ render_field_with_errors(form.topic, class="form-control") }}
                 {{ render_field_with_errors(form.learnt_skill, class="form-control") }}
