--- a/heart_hand/templates/curriculum_pages/curriculum_items_details.html
+++ b/heart_hand/templates/curriculum_pages/curriculum_items_details.html
@@ -4,7 +4,7 @@
     <div class="container">
         <h1>Curriculum Item details for {{the_curriculum_item.topic}}</h1>
             <ul>
-              <li><strong>Subject: </strong> {{the_curriculum_item.subject_id}}</li>  
+              <li><strong>Subject: </strong> {{the_curriculum_item.subject}}</li>  
               <li><strong>Term: </strong> {{the_curriculum_item.term}}</li>
               <li><strong>Learnt skill: </strong> {{the_curriculum_item.learnt_skill}}</li>
               <li><strong>Concepts: </strong> {{the_curriculum_item.concepts}}</li>
