--- a/heart_hand/templates/base.html
+++ b/heart_hand/templates/base.html
@@ -36,6 +36,9 @@
         <li class='nav-link'>
             <a href="{{url_for('curriculum.curriculum_menu')}}">Curriculum Menu</a>
         </li>
+        <li class='nav-link'>
+            <a href="{{url_for('classes.classes_menu')}}">Classes Menu</a>
+        </li>
         {% else %}
         <li class='nav-link'>
                 <a href="{{url_for('users.login')}}">Log In</a>
