added extra buttons to curriculum item detail forms

--- a/heart_hand/templates/classes_pages/lesson_details.html
+++ b/heart_hand/templates/classes_pages/lesson_details.html
@@ -4,6 +4,7 @@
     <div class="container">
         <h1>Lesson Details for {{the_lesson.lesson_name}}</h1>
             <ul>
+              <li><strong>Term: </strong> {{the_lesson.term}}</li>
               <li><strong>Day of Class: </strong> {{the_lesson.day_of_class}}</li>
               <li><strong>Lesson Start Time: </strong> {{the_lesson.lesson_time}}</li>
               <li><strong>Lesson Duration: </strong> {{the_lesson.lesson_duration}}</li>
