--- a/heart_hand/templates/curriculum_pages/add_curriculum_item.html
+++ b/heart_hand/templates/curriculum_pages/add_curriculum_item.html
@@ -3,7 +3,7 @@
 {% block content %}
   <div class="jumbotron">
     <div class="container">
-        <h1>Add Curriculum Item</h1>
+        <h1>Add Curriculum Item for {{the_curriculum_name}}</h1>
               <form method="POST">
 
                 {{form.hidden_tag()}}
