--- a/heart_hand/templates/curriculum_pages/curriculum_details.html
+++ b/heart_hand/templates/curriculum_pages/curriculum_details.html
@@ -18,6 +18,7 @@
             <a class="btn btn-primary btn-block" href="{{url_for('curriculum.show_table_for_term',term=2)}}" role="button">Curriculum Term 2</a>
             <a class="btn btn-primary btn-block" href="{{url_for('curriculum.show_table_for_term',term=3)}}" role="button">Curriculum Term 3</a>
             <a class="btn btn-primary btn-block" href="{{url_for('curriculum.show_table_for_term',term=4)}}" role="button">Curriculum Term 4</a>
+            <a class="btn btn-primary btn-block" href="{{url_for('curriculum.show_all_curriculum_items')}}" role="button">Show All Curriculum Items</a>
             <a class="btn btn-primary btn-block" href="{{url_for('curriculum.table_selector')}}" role="button">Term and Subject Selector</a>
     </div>
   </div>
