--- a/heart_hand/templates/classes_pages/update_lesson.html
+++ b/heart_hand/templates/classes_pages/update_lesson.html
@@ -8,6 +8,7 @@
 
                 {{form.hidden_tag()}}
                 {{ render_field_with_errors(form.lesson_name, class="form-control") }}
+                {{ render_field_with_errors(form.term, class="form-control") }}
                 {{ render_field_with_errors(form.day_of_class, class="form-control") }}
                 {{ render_field_with_errors(form.lesson_time, class="form-control") }}
                 {{ render_field_with_errors(form.lesson_duration, class="form-control") }}
